# aiindonesia

huggingface-exploration/: pyproject.toml  quick_tour.py
python-course/: Makefile  pyproject.toml
python-course/python_course/: 2_1.py  2_2.py  2_3.py  2_4.py  2_5.py  2_6.py  3_1.py  3_2.py  3_3.py  3_4.py  3_5.py  3_6.py  4_2.py  4_3.py  4_4.py  4_5.py  data.txt  game.py
python-course/python_course/game_package/: area.py  enemy.py  (+3 more)
python-datascience/: Crawler.ipynb  Dockerfile  Linear & Logistic Regression.ipynb  Logistic Regression - Apple Classifications.ipynb  additional.md  docker-compose.yaml
python-datascience/.ipynb_checkpoints/: Crawler-checkpoint.ipynb  Keyword-checkpoint.txt  Linear & Logistic Regression-checkpoint.ipynb  Logistic Regression - Apple Classifications-checkpoint.ipynb  Testing Yolo - 2-checkpoint.ipynb  Testing Yolos Tiny-checkpoint.ipynb  docker-compose-checkpoint.yaml  tanya-tanya-checkpoint.md
python-datascience/Session 10/: Sesi 10.ipynb
python-datascience/Session 3 - Random Forrest/: Random Forest.ipynb  tree.dot
python-datascience/Session 4 - Clustering/: Clustering Algorithms.ipynb
python-datascience/Session 6 - Feedforward/: Activation Function.ipynb
python-datascience/Session 7 - Backward/: 7_1_PyTorch_useful_function_.ipynb
python-datascience/Session 8/: Sesi 8.ipynb
python-datascience/Weekly Assignment 1/: Ames Housing Data.docx  Housing Price Prediction - Doodle.ipynb  Housing Price Prediction - Try 4.ipynb  Housing Price Prediction Final - Version 01.ipynb  Housing Price Prediction.ipynb  data_description.txt
(+17 files in other folders)
