[tool.poetry]
name = "huggingface-exploration"
version = "0.1.0"
description = ""
authors = ["Insomnius <aliana.arib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.2"
datasets = "^2.16.1"
torch = "^2.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
